Fixed dropdown TWAP overlap (#332)

--- a/src/ui/Dropdown/style.scss
+++ b/src/ui/Dropdown/style.scss
@@ -68,7 +68,6 @@
   p {
     line-height: 35px;
     flex-shrink: 0;
-    flex: 1;
 
     &.with-icon {
       padding-left: 32px;
